fixing bug and modify some stuff, add readme file
