# backend-go/module/auditorium/model/auditorium.go
@@ -30,7 +30,7 @@ type AuditoriumCreate struct {
 	common.SQLModel `json:",inline" swaggerignore:"true"`
 	Name            string `json:"name" gorm:"column:name;"`
 	Seats           int    `json:"seats" gorm:"column:seats;"`
-	CinemaID        int    `json:"-" gorm:"column:cinema_id;"`
+	CinemaID        int    `json:"cinema_id" gorm:"column:cinema_id;"`
 }
 
 func (AuditoriumCreate) TableName() string { return TableName }
